2015-03-31  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* misc-funcs.xml (cygwin_internal): Correct return type.

2015-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.36): Add new section.  Document GNU
	basename.

2015-03-30  Yaakov Selkowitz  <yselkowi@redhat.com>

	* posix.xml (std-gnu): Add basename.
	(std-notes): Add note about two forms of basename.

2015-03-13  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* Makefile.in (prefix): Define.

2015-03-12  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml (ntsec-mapping-nsswitch-desc): Fix typo.
	(ntsec-mapping-samba): Ditto.

2015-03-12  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml (ntsec-mapping-passwdinfo): Drop the word "Note" from
	a note.
	(ntsec-mapping-nsswitch): Fix typo.

2015-03-10  Corinna Vinschen  <corinna@vinschen.de>

	* faq-programming.xml: Accommodate switch of Cygwin repo to GIT.
	* setup-net.xml: Ditto.

2015-03-04  Corinna Vinschen  <corinna@vinschen.de>

	* posix.xml (std-bsd): Add issetugid.

2015-03-03  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.35): Add SIGSYS change.

2015-03-03  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.35): Add new section.

2015-02-28  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (getfacl): Adjust options to option nmame change.

2015-02-25  Warren Young  <warren@etr-usa.com>

	* faq-using.xml (faq.using.ssh-pubkey-stops-working): More
	improvements to the chgrp None hack to account for domains
	and non-English versions of Windows.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml (ntsec-mapping): Match the description of the default
	values for db_home, db_shell, and db_gecos to the latest changes.

2015-02-24  Warren Young  <warren@etr-usa.com>

	* faq-using.xml (faq.using.ssh-pubkey-stops-working): Added the
	chgrp None ~/.ssh/* fix for SSH key failure in Cygwin 1.7.34+.

2015-02-17  Warren Young  <warren@etr-usa.com>
